--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,21 +12,22 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
+    <%= form.label "Nombre", style: "display: block" %>
     <%= form.text_field :name %>
   </div>
 
   <div>
-    <%= form.label :description, style: "display: block" %>
+    <%= form.label "Descripción", style: "display: block" %>
     <%= form.textarea :description %>
   </div>
 
   <div>
-    <%= form.label :price, style: "display: block" %>
+    <%= form.label "Precio", style: "display: block" %>
     <%= form.number_field :price %>
   </div>
-
+  <br>
   <div>
-    <%= form.submit %>
+    <%= form.submit "Crear", class: "btn btn-success" %>
+    <%= link_to "Volver a productos", products_path, class: "btn btn-danger" %>
   </div>
 <% end %>
