--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,12 +1,11 @@
-<% content_for :title, "Editing product" %>
+<div class="container">
+  <% content_for :title, "Editar producto" %>
 
-<h1>Editing product</h1>
+  <h1>Editar producto</h1>
 
-<%= render "form", product: @product %>
+  <%= render "form", product: @product %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this product", @product %> |
-  <%= link_to "Back to products", products_path %>
+  
 </div>
