--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,14 @@
-<% content_for :title, "New product" %>
+<div class="container">
 
-<h1>New product</h1>
+  <% content_for :title, "New product" %>
 
-<%= render "form", product: @product %>
+  <h1>Crear producto</h1>
 
-<br>
+  <%= render "form", product: @product %>
 
-<div>
-  <%= link_to "Back to products", products_path %>
+  <br>
+
+  <div>
+    
+  </div>
 </div>
