--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: product) do |form| %>
+<%= form_with(model: product, local: true, html: { multipart: true }) do |form| %>
   <% if product.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -25,6 +25,13 @@
     <%= form.label "Precio", style: "display: block" %>
     <%= form.number_field :price %>
   </div>
+
+  <div class="form-group">
+    <%= form.label :images, "Imágenes del producto" %>
+    <%= form.file_field :images, multiple: true, class: "form-control" %>
+  </div>
+
+
   <br>
   <div>
     <%= form.submit "Crear", class: "btn btn-success" %>
