--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,6 +15,7 @@
           <th>Descripción</th>
           <th>Precio</th>
           <th colspan="2">Acciones</th>
+          <th>Imagenes</th>
         </tr>
         
         <% @products.each do |product| %>
@@ -24,6 +25,19 @@
             <td>Bs. <%= product.price %></td>
             <td><%= link_to "Editar producto", edit_product_path(product), class: "btn btn-success" %></td>
             <td><%= button_to "Borrar el producto", product, method: :delete, class: "btn btn-danger" %></td>
+            <td>
+              <% if product.images.attached? %>
+                <div class="row">
+                  <% product.images.each do |image| %>
+                    <div class="col-xs-6 col-md-3">
+                      <%= image_tag image, class: "img-responsive", style: "margin-bottom: 10px;" %>
+                    </div>
+                  <% end %>
+                </div>
+              <% else %>
+                <p><em>Sin imágenes</em></p>
+              <% end %>
+            </td>
           </tr>
         <% end %>
         
