--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,7 @@
                           <li><%= link_to "Reseñas", "/#blog", data: { turbo: false } %></li>
                           <li><%= link_to "Contacto", "/#contact", data: { turbo: false } %></li>
                           <li><%= link_to "Productos", products_path if authenticated? %></li>
+                          <li><%= link_to "Categorías", categories_path if authenticated? %></li>
                           <li><%= link_to "Reseñas", reviews_path if authenticated? %></li>
                           <li><%= button_to "Log out", session_path, method: :delete if authenticated? %></li>
                           
@@ -65,6 +66,7 @@
                           <li class="scroll"><a href="#blog">RESEÑAS</a></li>
                           <li class="scroll"><a href="#contact">CONTACTO</a></li>
                           <li><%= link_to "Productos", products_path if authenticated? %></li>
+                          <li><%= link_to "Categorías", categories_path if authenticated? %></li>
                           <li><%= link_to "Reseñas", reviews_path if authenticated? %></li>
                           <li><%= button_to "Cerrar Sesión", session_path, method: :delete if authenticated? %></li>
                         <% end %>
