--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.file_field :images, multiple: true, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :category_id, "Categoría" %>
+    <%= form.collection_select :category_id, Category.all, :id, :name, { prompt: "Selecciona una categoría" }, class: "form-control" %>
+  </div>
+
 
   <br>
   <div>
